# burrowMQ

./: Cargo.toml  Makefile  README.en.md  README.md  README.ru.md
.github/workflows/: ci.yml
src/: buffer.rs  defer.rs  handle_basic.rs  handle_channel.rs  handle_connection.rs  handle_exchange.rs  handle_queue.rs  lib.rs  main.rs  models.rs  parsing.rs  server.rs  server.rs~  utils.rs
src/queue/: crossbeam.rs  lock_free.rs  mod.rs  mutex_queue.rs
tests/: dsl.rs  integration_test.rs  integration_test.rs~
