[package]
name = "burrow-mq"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = 'abort'

[profile.test]
panic = 'abort'

[dependencies]
tokio = { version = "1.44", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
anyhow = "1.0"
futures-util = "0.3.31"
futures-lite = "2.6.0"
serde_json = "1.0.140"
amq-protocol = { version = "7.2.2" }
bytes = "1.10.1"
futures-io = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio-util = "0.7.15"
log = "0.4.27"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = { version = "0.11.7", features = ["unstable-kv", "auto-color"] }
rand = "0.9.1"
regex = "1.11.1"
dashmap = "7.0.0-rc2"

[dev-dependencies]
lapin = "2.3.0"
nom = "8.0.0"