[package]
name = "burrow-mq"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = 'abort'

[profile.test]
panic = 'abort'

[dependencies]
tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-util = "0.7.15"
anyhow = "1.0"
futures-lite = "2.6.0"
amq-protocol = { version = "7.2.2" }
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
log = "0.4.27"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = { version = "0.11.7", features = ["kv", "auto-color"] }
regex = "1.11.1"
dashmap = "6.1.0"
rand = "0.9.1"
futures = "0.3.31"
crossbeam-queue = "0.3.12"

[dev-dependencies]
lapin = "2.3.0"
nom = "8.0.0"
console-subscriber = "0.4.1"